www/index.css
html, body {
  height: 100%;
  width: 100%;
  margin: 0;
}

.icon-sm {
  height: 80%;
  padding: 1%;
}

.icon-big {
  height: 80%;
  padding: 1%;
}




#vheader {
  height: 10%;
  background-color: red;
}

#vbody {
  height: 65%;
  background-color: white;
  text-align: center;
}

  #cont-rest-cont {
    display: inline-table;
    width:    50%;
    height:  100%;
    padding: 5% 0;
  }

    #cont-rest {
      display: table-cell;
      vertical-align: middle;
      border: 1px solid black;
    }

    #cont-rest-img {
      width: 100%;
      height: 90%;
    }

    #cont-rest-desc {
      width: 100%;
      height: 10%;
      display: table;
      background-color: black;
    }
      #cont-rest-desc span {
        display: table-cell;
        vertical-align: middle;
        color: white;
      }

#vfooter {
  height: 25%;
}

  .vfooter-side {
    float: left;
    width: 50%;
  }

  .vfooter-side div {
    width: 100px;
    height: 100px;
    border: 1px solid black;
    border-radius: 50%;
    margin: 0 5%;
  }


  #cut-that {
    float: right;
  }

  #fork-yeah {
    float: left;
  }

